datatable with pagination and sorting and fixed scrollbar issue

--- a/src/components/side-main.css
+++ b/src/components/side-main.css
@@ -200,7 +200,9 @@ input {
   margin: 0; /* Remove default margin */
   padding: 0; /* Remove default padding */
   width: 100%; /* Make body take up the full width of the viewport */
-  height: 100vh; /* Make body take up the full height of the viewport */
+  height: calc(
+    100vh - 100px
+  ); /* Make body take up the full height of the viewport */
   box-sizing: border-box; /* Include padding and border in the element's total width and height */
 }
 
@@ -569,6 +571,8 @@ acc-info-personal h3 {
   flex: 1.2;
   border-radius: 5px;
   box-shadow: 0px 0px 10px rgba(55, 60, 75, 0.5);
+  height: 335px;
+  overflow-y: scroll;
 }
 
 #newOrderData {
@@ -589,7 +593,7 @@ acc-info-personal h3 {
   margin: 0;
   margin-left: 5%;
   margin-top: 5%;
-  height: 88%;
+  /* height: 88%; */
   border-top: 2px solid rgb(17, 17, 23);
   padding-top: 12px;
 }
@@ -730,6 +734,9 @@ acc-info-personal h3 {
   margin-top: 5px;
   height: 100%;
   box-shadow: 0px 0px 10px rgba(55, 60, 75, 0.5);
+}
+#orders nav {
+  background-color: transparent !important;
 }
 
 .container {
@@ -1029,7 +1036,8 @@ thead {
     padding: 0;
     border: none;
     display: none; /* block */
-    height: 100%;
+    height: 300px;
+    overflow-y: scroll;
   }
   #newOrderData {
     margin: 0;
